--- a/404.html
+++ b/404.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Redirecting...</title>
     <script type="text/javascript">
-      // Redirect any 404s on GitHub Pages back into the React app
-      var pathname = window.location.pathname.replace(/^\/damayan-savings/, "");
-      var redirectTo = "/damayan-savings" + pathname + window.location.search + window.location.hash;
-      window.location.replace(redirectTo);
+      // ✅ Redirect any 404s on GitHub Pages back into the React app
+      const path = window.location.pathname.replace(/\/damayan-savings/, "");
+      const redirect = "/damayan-savings" + path + window.location.search + window.location.hash;
+      window.location.replace(redirect);
     </script>
   </head>
   <body>
