--- a/404.html
+++ b/404.html
@@ -4,10 +4,16 @@
     <meta charset="utf-8" />
     <title>Redirecting...</title>
     <script type="text/javascript">
-      // ✅ Redirect any 404s on GitHub Pages back into the React app
-      const path = window.location.pathname.replace(/\/damayan-savings/, "");
-      const redirect = "/damayan-savings" + path + window.location.search + window.location.hash;
-      window.location.replace(redirect);
+      // Only redirect if not already inside the React app
+      var path = window.location.pathname;
+      if (!path.startsWith("/damayan-savings")) {
+        var newUrl =
+          "/damayan-savings" +
+          path +
+          window.location.search +
+          window.location.hash;
+        window.location.replace(newUrl);
+      }
     </script>
   </head>
   <body>
