--- a/404.html
+++ b/404.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Redirecting...</title>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/tclc-logo1.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>TCLC-Damayan Savings</title>
+
+    <!-- ✅ REDIRECT LOGIC for GitHub Pages SPA fix -->
     <script type="text/javascript">
-      // When a 404 occurs, GitHub Pages serves this file.
-      // We’ll redirect back to the saved route inside the React app.
       (function() {
-        var repo = "/damayan-savings";
-        var redirect = sessionStorage.redirect;
-        sessionStorage.removeItem("redirect");
-        var target = repo + (redirect || "/");
-        window.location.replace(target);
+        // Save the current path, query, and hash
+        var redirectPath =
+          window.location.pathname +
+          window.location.search +
+          window.location.hash;
+
+        // Save it in sessionStorage for index.html to pick up later
+        sessionStorage.setItem("redirect", redirectPath);
+
+        // Redirect to the app's root index.html
+        window.location.replace("/damayan-savings/");
       })();
     </script>
   </head>
+
   <body>
-    <p>Redirecting to TCLC-Damayan Savings...</p>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
