--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,22 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TCLC Damayan Savings — A member-based savings platform"
+      content="TCLC Damayan Savings — A member-based savings and income platform"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>TCLC-Damayan Savings</title>
 
-    <!-- ✅ RESTORE redirect path from 404.html if present -->
+    <!-- ✅ Restore redirect path from 404.html if present (for SPA routing on GitHub Pages) -->
     <script type="text/javascript">
       (function () {
         var redirect = sessionStorage.getItem("redirect");
         if (redirect) {
           sessionStorage.removeItem("redirect");
-          window.history.replaceState(null, null, redirect);
+          // Only rewrite path if not already at the correct route
+          if (window.location.pathname === "/damayan-savings/" || window.location.pathname === "/damayan-savings") {
+            window.history.replaceState(null, null, redirect);
+          }
         }
       })();
     </script>
