--- a/public/index.html
+++ b/public/index.html
@@ -2,37 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
-    <!-- ✅ Use your damayan.png as the main icon -->
-    <link rel="icon" href="%PUBLIC_URL%/damayan.png" />
-
+    <link rel="icon" href="%PUBLIC_URL%/tclc-logo1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="TCLC Damayan Savings — A member-based savings and income platform"
     />
-
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/damayan.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>TCLC-Damayan Savings</title>
-
-    <!-- ✅ Open Graph (Link Preview) Meta Tags -->
-    <meta property="og:title" content="TCLC Damayan Savings" />
-    <meta
-      property="og:description"
-      content="A member-based savings and income platform for secure and rewarding savings."
-    />
-    <meta property="og:image" content="%PUBLIC_URL%/damayan.png" />
-    <meta property="og:url" content="https://lutz1.github.io/damayan-savings/" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="TCLC Damayan Savings" />
-    <meta
-      name="twitter:description"
-      content="A member-based savings and income platform for secure and rewarding savings."
-    />
-    <meta name="twitter:image" content="%PUBLIC_URL%/damayan.png" />
 
     <!-- ✅ Restore redirect path from 404.html if present (for SPA routing on GitHub Pages) -->
     <script type="text/javascript">
@@ -41,10 +20,7 @@
         if (redirect) {
           sessionStorage.removeItem("redirect");
           // Only rewrite path if not already at the correct route
-          if (
-            window.location.pathname === "/damayan-savings/" ||
-            window.location.pathname === "/damayan-savings"
-          ) {
+          if (window.location.pathname === "/damayan-savings/" || window.location.pathname === "/damayan-savings") {
             window.history.replaceState(null, null, redirect);
           }
         }
