--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <!-- App Icon -->
     <link rel="icon" href="%PUBLIC_URL%/tclc-logo1.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+
+    <!-- Mobile Viewport (PWA friendly) -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+
+    <!-- Theme Colors -->
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="background-color" content="#0f172a" />
+
+    <!-- App Description -->
     <meta
       name="description"
-      content="TCLC Damayan Savings — A member-based savings and income platform"
+      content="TCLC Damayan Savings — A member-based savings, merchant, and income platform"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>TCLC-Damayan Savings</title>
 
-    <!-- ✅ Restore redirect path from 404.html if present (for SPA routing on GitHub Pages) -->
+    <!-- iOS PWA Support -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="TCLC Damayan" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192x192.png" />
+
+    <!-- Android / Chrome PWA -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>TCLC Damayan Savings</title>
+
+    <!-- ✅ Restore redirect path from 404.html (GitHub Pages SPA fix) -->
     <script type="text/javascript">
       (function () {
         var redirect = sessionStorage.getItem("redirect");
         if (redirect) {
           sessionStorage.removeItem("redirect");
-          // Only rewrite path if not already at the correct route
-          if (window.location.pathname === "/damayan-savings/" || window.location.pathname === "/damayan-savings") {
+          if (
+            window.location.pathname === "/damayan-savings/" ||
+            window.location.pathname === "/damayan-savings"
+          ) {
             window.history.replaceState(null, null, redirect);
           }
         }
