--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="TCLC Damayan" />
+    <!-- Apple touch icons for iOS Add to Home Screen -->
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/icons/icon-192x192.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/icons/icon-192x192.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/icons/icon-128x128.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192x192.png" />
 
     <!-- Android / Chrome PWA -->
