--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,13 @@
     <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/icons/icon-192x192.png" />
     <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/icons/icon-128x128.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192x192.png" />
+    <!-- iOS startup images (splash screen) - map to available icons as placeholders -->
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/icons/icon-512x512.png" media="(device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/icons/icon-512x512.png" media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/icons/icon-512x512.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/icons/icon-384x384.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/icons/icon-256x256.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/icons/icon-128x128.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
 
     <!-- Android / Chrome PWA -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
