--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 
     <!-- App Icon -->
-    <link rel="icon" href="%PUBLIC_URL%/tclc-logo1.png" />
+    <link rel="icon" href="%PUBLIC_URL%/damayan.png" />
 
     <!-- Mobile Viewport (PWA friendly) -->
     <meta
